methods.basics.Methods.scala.error
Compilation error:
Methods:2: error: not found: type int
  var nb : int = 0
           ^